<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackal_sim</name>
  <version>1.0.0</version>
  <description>This package is intended to facilitate the startup of the clearpath nav2 demo.</description>
  <maintainer email="kevin@todo.todo">kevin</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
